# derive_custom_enum_traits

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: test_enum_index.rs
